--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">ram-lost-found-js</string>
+  <string name="app_name">RAM Lost &amp; Found</string>
 </resources>
